
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int fptr ;
 int fputc (int,int ) ;

void filler(int ch,int sz)
{
    for(int i=0;i<sz;i++)
        fputc(ch,fptr);
}
